improved igredient management
